objects/GP_Tabla_Temporaria__c.object
<CustomObject>
    <fields>
        <fullName>Apellido_del_cliente__c</fullName>
        <label>Apellido del cliente</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Celular__c</fullName>
        <label>Celular</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Email_del_cliente__c</fullName>
        <label>Email del cliente</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Nombre_del_cliente__c</fullName>
        <label>Nombre del cliente</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Puntos_que_se_vencen__c</fullName>
        <label>Puntos que se vencen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GP Tabla Temporaria</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cuenta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GP Tablas Temporarias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>